@@ -5,7 +5,7 @@ Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Ana Beatriz Guerrero Lopez <ana@debian.org>, Sune Vuorela <sune@debian.org>, Modestas Vainius <modax@debian.org>,
  José Manuel Santamaría Lema <panfaust@gmail.com>
 Build-Depends: kde-sc-dev-latest (>= 4:4.6.1),
- cdbs, cmake, debhelper (>= 7), pkg-kde-tools (>= 0.9),
+ cmake, debhelper (>= 7.2.7~), pkg-kde-tools (>= 0.12),
  kdelibs5-dev (>= 4:4.6), kdepimlibs5-dev (>= 4:4.6),
  libtidy-dev, zlib1g-dev, libboost-dev, libxslt-dev
 Standards-Version: 3.9.1
