@@ -1,4 +1,9 @@
 #!/usr/bin/make -f
 
-include /usr/share/pkg-kde-tools/qt-kde-team/1/debian-qt-kde.mk
+include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
+
+.PHONY: override_dh_auto_test
+
+override_dh_strip:
+	$(overridden_command) --dbg-package=kdewebdev-dbg
 
